--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <a href="FichasHome/">FichasHome</a>
             <a href="PradoTXL/">PradoTXL</a>
             <a href="FJCruiser/">FJCruiser</a>
+            <a href="pruebas/">Pruebas HTML normal</a>
    
         </div>
     </div>
